<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exp_and_cat.ExpenseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/expensebackbutton"
                android:layout_width="44dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back_button_ic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/expense"
                android:textColor="@color/dark_green"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/expensebackbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/half_border"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@+id/expensebackbutton"
                tools:layout_editor_absoluteX="0dp">

                <ImageView
                    android:id="@+id/profileimage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/planningbg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/expense_name_tv"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/expensenameedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/white_rounded_box"
                    android:fontFamily="@font/dm_sans"
                    android:hint="@string/expense_name"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/expensecategoryspinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/white_rounded_box"
                    android:padding="12dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/AddInitialCat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/add_category_first"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/dm_sans_bold"
                        android:text="@string/amount"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/expenseamountedittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_rounded_box"
                        android:drawableStart="@drawable/peso_ic"
                        android:drawableTint="@color/black"
                        android:fontFamily="@font/dm_sans"
                        android:hint="@string/expense_amount"
                        android:inputType="numberDecimal"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textColorHint="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/expense_desc_tv"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/expensedescedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/white_rounded_box"
                    android:fontFamily="@font/dm_sans"
                    android:gravity="start"
                    android:hint="@string/expense_desc"
                    android:maxLines="5"
                    android:minLines="5"
                    android:padding="12dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/expensesubmitbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="150dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/dm_sans_bold"
                    android:paddingStart="40dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="50dp"
                    android:paddingBottom="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>