<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/black_background"
    android:padding="12dp">

    <TextView
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/dot"
        android:textColor="@color/red"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dot"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/expense_total_amount"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/categoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalAmount"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/category_name_tv"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</RelativeLayout>
