<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.EmailVerificationActivity">

    <ImageView
        android:id="@+id/fxlogo"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/fxtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/forgot_pass_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_email"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/dark_green"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fxlogo"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/verify_email_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_email"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass_title"
        android:layout_margin="5dp" />


    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:fontFamily="@font/poppins"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_email_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>