<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_semibold"
        android:text="@string/settings"
        android:textColor="@color/dark_green"
        android:textSize="25sp"
        android:gravity="center"/>

        <TextView
            android:id="@+id/deleteAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/deleteAccountBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/red_rounded_button"
            android:drawableTint="@color/dark_green"
            android:fontFamily="@font/dm_sans_bold"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</FrameLayout>